# makebuilder

./: .clang-format  .gitignore  .module.config  .project.config  AGENTS.md  BugReport.txt  CMakeLists.txt  JOURNAL.md  MakeBuild.config  README.md  ReviewNote.txt  ReviewNote_Summary.txt  TODO.txt  TestResults.txt  build.bat  build.sh  graph.dot  output.dot  run.bat  run.sh  runDebug.bat  runDebug.sh  runDev.bat  runDev.sh
Application/: .module.config  CMakeLists.txt  ReviewNote.txt
Application/MakeBuild/: .module.config  BuildConfig.cpp  BuildConfig.h  CMakeLists.cpp  CMakeLists.h  CMakeLists.txt  DependencyGraph.cpp  DependencyGraph.h  Main.cpp  Module.cpp  Module.h  ProjectBuilder.cpp  ProjectBuilder.h  ReviewNote.txt  TestRunner.cpp  TestRunner.h  makebuild
Common/: CMakeLists.txt  Directory.cpp  Directory.h  File.h  OSAbstractLayer.cpp  OSAbstractLayer.h  StringUtil.cpp  StringUtil.h
MakeBuild/: .gitignore  Build.cpp  Build.h  CMakeFile.cpp  CMakeFile.h  CMakeLists.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  Main.cpp  MakeBuild.cpp  MakeBuildConfig.cpp  MakeBuildConfig.h  Makefile  Module.cpp  Module.h  ProjectDir.cpp  ProjectDir.h
MakeBuild/Common/: CMakeLists.txt  Directory.cpp  Directory.h  File.h  OSAbstractLayer.cpp  OSAbstractLayer.h  StringUtil.cpp
MakeBuild/MakeBuild/: Build.cpp  Build.h  CMakeFile.cpp  CMakeFile.h  CMakeLists.txt  MakeBuild.cpp  ProjectDir.cpp  ProjectDir.h  build.sh
Scripts/: ReviewNote.txt  RunFormatter.sh
Source/: .module.config  CMakeLists.txt  ReviewNote.txt
Source/Common/: .module.config  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  ConfigParserTest.cpp  Directory.cpp  Directory.h  File.h  OSAbstractLayer.cpp  OSAbstractLayer.h  ReviewNote.txt  StringUtil.cpp  StringUtil.h
Test/: TestResults.txt
Test/testcases/: TestResults.txt
Test/testcases/01_simple_executable/src/: CMakeLists.txt  main.cpp
Test/testcases/02_static_library/: CMakeLists.txt
Test/testcases/03_header_only/: CMakeLists.txt  headerlib.h
Test/testcases/05_submodules/: CMakeLists.txt
Test/testcases/05_submodules/src/: CMakeLists.txt
TestCases/: CMakeLists.txt
TestCases/01_simple_executable/: .module.config  CMakeLists.txt  main.cpp
TestCases/01_simple_executable/src/: .module.config  CMakeLists.txt
TestCases/02_static_library/: .module.config  CMakeLists.txt
TestCases/02_static_library/App/: .module.config  main.cpp
TestCases/02_static_library/TestLib/: .module.config  TestLib.cpp
TestCases/03_external_library/: .module.config  pretest_commands.txt
TestCases/03_external_library/App/: .module.config  dependency.txt  linkDirectory.txt  main.cpp
TestCases/03_header_only/: CMakeLists.txt
TestCases/04_multi_config/: .module.config
TestCases/04_multi_config/src/: .module.config  CMakeLists.txt  main.cpp
TestCases/04_objective_c/: .module.config
TestCases/04_objective_c/objc/: .module.config  lib.m
TestCases/04_objective_c/objcpp/: lib.mm
TestCases/04_objective_c/src/: .module.config  main.cpp
TestCases/05_submodules/: CMakeLists.txt
TestCases/05_submodules/src/: .module.config  CMakeLists.txt  main.cpp
TestCases/06_dependency_graph/: .module.config  CMakeLists.txt  main.cpp
TestCases/06_dependency_graph/lib/: .module.config  Lib.h
TestCases/06_dependency_graph/src/: .module.config  CMakeLists.txt  dependency.txt  main.cpp
TestCases/07_external_libraries/: .module.config  CMakeLists.txt
TestCases/07_external_libraries/src/: CMakeLists.txt
TestCases/08_objective_c/: CMakeLists.txt
TestCases/08_objective_c/objc/: CMakeLists.txt
TestCases/08_objective_c/objcpp/: .module.config  CMakeLists.txt
TestCases/08_objective_c/src/: CMakeLists.txt  dependency.txt
build_test/Application/MakeBuild/: makebuild
build_test/build_test/Application/MakeBuild/: makebuild
test_proj/: .module.config  CMakeLists.txt
test_proj/MyModule/: .module.config  CMakeLists.txt  customCMake.txt
test_proj/MyModule/src/: CMakeLists.txt
